# raytracing-engine

./: .gitignore  CMakeLists.txt  EngineImage.cpp  EngineImage.h  LICENSE  Primitive.h  README.md  Ray.cpp  Ray.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Vector3.cpp  Vector3.h  main.cpp
Cameras/: Camera.h  OrthoCamera.cpp  OrthoCamera.h
Engine/: EngineImage.cpp  EngineImage.h  Scene.cpp  Scene.h  ShadeInfo.cpp  ShadeInfo.h  Tracer.cpp  Tracer.h
Geometry/: Ray.cpp  Vector3.h  ViewPlane.h
Geometry/Objects/: Plane.cpp  Primitive.h  Sphere.cpp  Sphere.h
Lights/: LightIntensity.cpp
Materials/: Material.cpp  Material.h
Utilities/: FileManager.cpp  FileManager.h  Utility.cpp
include/: Camera.h  FileManager.h  Image.h  LightIntensity.h  Plane.h  Primitive.h  Ray.h  Scene.h  Sphere.h  Utility.h  Vector3.h
src/: FileManager.cpp  Image.cpp  LightIntensity.cpp  Plane.cpp  Primitive.cpp  Ray.cpp  Scene.cpp  Sphere.cpp  Utility.cpp  Vector3.cpp
src/BRDF/: BRDF.cpp  BRDF.h  LambertBRDF.cpp  LambertBRDF.h  SpecularBRDF.cpp  SpecularBRDF.h
src/Cameras/: Camera.cpp  Camera.h  OrthoCamera.cpp  OrthoCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
src/Engine/: EngineImage.cpp  EngineImage.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  ShadeInfo.cpp  ShadeInfo.h  Tracer.cpp  Tracer.h
src/Geometry/: Ray.cpp  Ray.h  Vector3.cpp  Vector3.h  ViewPlane.cpp  ViewPlane.h
src/Geometry/Objects/: Mesh.cpp  Mesh.h  Plane.cpp  Plane.h  Primitive.cpp  Primitive.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
src/Lights/: AmbientLight.cpp  AmbientLight.h  Light.cpp  Light.h  LightIntensity.cpp  LightIntensity.h  PointLight.cpp  PointLight.h
src/Materials/: Material.cpp  Material.h  PhongMat.cpp  PhongMat.h
src/Utilities/: AdaptiveSampler.cpp  AdaptiveSampler.h  Configuration.cpp  Configuration.h  FileManager.cpp  FileManager.h  ObjParser.cpp  ObjParser.h  Utility.cpp  Utility.h
